--- a/time_manager_front/package.json
+++ b/time_manager_front/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.6.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.2",
     "chartist": "0.11.2",
     "google-maps": "3.3.0",
     "mdbvue": "^5.8.2",
-    "vue": "2.6.10",
+    "sweetalert2": "^8.17.6",
+    "vue": "^2.6.10",
     "vue-clickaway": "2.2.2",
     "vue-github-buttons": "3.1.0",
     "vue-material": "1.0.0-beta-11",
