--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.0.2",
     "chartist": "0.11.2",
     "google-maps": "3.3.0",
+    "jwt-decode": "^2.2.0",
     "mdbvue": "^5.8.2",
     "sweetalert2": "^8.17.6",
     "vue": "^2.6.10",
