--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-material": "1.0.0-beta-11",
     "vue-router": "^3.0.6",
     "vue-social-sharing": "2.4.5",
+    "vuejs-datatable": "^2.0.0-alpha.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
