--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.6.0",
+    "@types/jwt-decode": "^2.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
     "chartist": "0.11.2",
     "google-maps": "3.3.0",
     "jwt-decode": "^2.2.0",
+    "luxon": "^1.19.3",
     "mdbvue": "^5.8.2",
+    "moment": "^2.24.0",
     "sweetalert2": "^8.17.6",
     "vue": "^2.6.10",
     "vue-clickaway": "2.2.2",
+    "vue-datetime": "^1.0.0-beta.10",
     "vue-github-buttons": "3.1.0",
     "vue-material": "1.0.0-beta-11",
     "vue-router": "^3.0.6",
     "vue-social-sharing": "2.4.5",
     "vuejs-datatable": "^2.0.0-alpha.2",
-    "vuex": "^3.1.1"
+    "vuejs-datetimepicker": "^1.1.13",
+    "vuex": "^3.1.1",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.8.0",
