--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-clickaway": "2.2.2",
     "vue-datetime": "^1.0.0-beta.10",
     "vue-github-buttons": "3.1.0",
+    "vue-jquery": "^1.0.6",
     "vue-material": "1.0.0-beta-11",
     "vue-router": "^3.0.6",
     "vue-social-sharing": "2.4.5",
