--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-material": "1.0.0-beta-11",
     "vue-router": "^3.0.6",
     "vue-social-sharing": "2.4.5",
+    "vue2-datepicker": "^2.12.0",
     "vuejs-datatable": "^2.0.0-alpha.2",
     "vuejs-datetimepicker": "^1.1.13",
     "vuex": "^3.1.1",
