--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.2",
     "chartist": "0.11.2",
     "google-maps": "3.3.0",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "luxon": "^1.19.3",
     "mdbvue": "^5.8.2",
